small textual edits

--- a/ecomerce-project/cart.html
+++ b/ecomerce-project/cart.html
@@ -49,9 +49,9 @@
                     <td>Subtotal</td>
                 </tr>
             </thead>
-            <tbody>
+            <tbody id="cartItems">
                 <tr>
-                    <td> <a href=""><i class="fa-solid fa-x"></i></a></td>
+                    <td class="remove"> <button> <i class="fa-solid fa-x"></i></button></td>
                     <td><img  src="imgs/products/f1.jpg" alt=""></td>
                     <td>Cartoon Astronaut T-shirt</td>
                     <td>$118.19</td>
@@ -59,7 +59,7 @@
                     <td>$118.19</td>
                 </tr>
                 <tr>
-                    <td> <a href=""><i class="fa-solid fa-x"></i></a></td>
+                    <td class="remove"> <button ><i class="fa-solid fa-x"></i></button></td>
                     <td><img  src="imgs/products/f2.jpg" alt=""></td>
                     <td>Cartoon Astronaut T-shirt</td>
                     <td>$118.19</td>
@@ -67,7 +67,7 @@
                     <td>$118.19</td>
                 </tr>
                 <tr>
-                    <td> <a href=""><i class="fa-solid fa-x"></i></a></td>
+                    <td class="remove"> <button ><i class="fa-solid fa-x"></i></button></td>
                     <td><img  src="imgs/products/f3.jpg" alt=""></td>
                     <td>Cartoon Astronaut T-shirt</td>
                     <td>$118.19</td>
@@ -175,7 +175,7 @@
     </div>
 
 
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
