--- a/ecomerce-project/about.html
+++ b/ecomerce-project/about.html
@@ -83,7 +83,7 @@
             <img src="imgs/f5.png" alt="">
             <h6>Happy Sell</h6>
         </div>
-        <div class="fe-box">
+        <div class="fe-box" >
             <img src="imgs/f6.png" alt="">
             <h6>Support</h6>
         </div>
@@ -157,7 +157,7 @@
     </div>
 
 
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
