--- a/ecomerce-project/index.html
+++ b/ecomerce-project/index.html
@@ -48,7 +48,7 @@
     <section id="product1" class="section-p1">
         <h2>Featured Products</h2>
         <p>Summer Collection New Morden Design</p>
-        <div id="pro-container" class="pro-container">
+        <div id="pro-Container" class="pro-container">
         </div>
     </section>
 
