--- a/ecomerce-project/sproduct.html
+++ b/ecomerce-project/sproduct.html
@@ -238,7 +238,7 @@
             }
         });
     </script>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
