added new heeroand color

--- a/developerPortfolio/index.html
+++ b/developerPortfolio/index.html
@@ -6,16 +6,14 @@
     <title>React Developer Portfolio</title>
     <link rel="stylesheet"  type="text/css" href="main.css">
     <script type="text/javascript"
-        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
-</script>
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 </head>
 <body>
     <div class="homepage">
         <div class="sidebar">
             <nav>
                 <ul>
-                    <li><img src="imgs/email.png" alt=""></li>
-                    <p style="padding:0px 0 15px; margin: 0;  text-align: center; font-weight: bold; width: 80px; "><a href="#contact" style="color: #9e81b9;">Ericka Erickson</a></p>
+                    <p style="padding:15px 0 15px; margin: 0;  text-align: center; font-weight: bold; width: 80px; "><a href="#contact" style="color: #606c38;">Ericka Erickson</a></p>
                     <li><a  href="#">Home</a></li>
                     <hr>
                     <li><a  href="#about">About</a></li>
@@ -31,7 +29,8 @@
             
         </div>  
         <div class="header hidden">
-           <a href="#contact"> <h1>Ericka C Erickson</h1></a>
+            <h1>Ericka C </h1>
+            <h1>Erickson</h1>
             <h4>React Frontend Developer</h4>
         </div>  
     </div>
