added media queries

--- a/developerPortfolio/index.html
+++ b/developerPortfolio/index.html
@@ -29,8 +29,8 @@
             
         </div>  
         <div class="header hidden">
-            <h1>Ericka C </h1>
-            <h1>Erickson</h1>
+            <h1>Ericka C 
+            Erickson</h1>
             <h4>React Frontend Developer</h4>
         </div>  
     </div>
