--- a/ecomerce-project/index.html
+++ b/ecomerce-project/index.html
@@ -1,169 +1,164 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ecommerce project</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/90fa5a8a10.js" crossorigin="anonymous"></script>
-</head>
+    <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/90fa5a8a10.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
 
-<body>
+  <body>
     <section id="header">
-        <a href="#"><img src="imgs/logo.png" alt="">
-        </a>
+      <a href="#"><img src="imgs/logo.png" alt="" /> </a>
 
-        <div>
-            <ul id="navbar">
-                <li><a class="active" href="index.html">Home</a></li>
-                <li><a href="shop.html">Shop</a></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li class="active" id="lg-bag"><a href="cart.html"><i style="color:#088178" class="fa-solid fa-cart-shopping "></i></a>
-                </li>
-                <span>0</span>                
-                <a href="#" id="close"><i class="fa-solid fa-x"></i></a>
-
-            </ul>
-        </div>
-        <div id="mobile">
-            <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
-            <span>0</span> 
-            <i id="bar" class="fas fa-outdent"></i>
-
-        </div>
+      <div>
+        <ul id="navbar">
+          <li><a class="active" href="index.html">Home</a></li>
+          <li><a href="shop.html">Shop</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li class="active" id="lg-bag">
+            <a href="cart.html"
+              ><i style="color: #088178" class="fa-solid fa-cart-shopping"></i
+            ></a>
+          </li>
+          <span>0</span>
+          <a href="#" id="close"><i class="fa-solid fa-x"></i></a>
+        </ul>
+      </div>
+      <div id="mobile">
+        <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+        <span>0</span>
+        <i id="bar" class="fas fa-outdent"></i>
+      </div>
     </section>
     <section id="hero">
-        <h4>Trade-in-offer</h4>
-        <h2>Super Value Deals</h2>
-        <h1>On all Products</h1>
-        <p>save more with coupons & up to 70% off!</p>
-        <button>Shop Now</button>
+      <h4>Trade-in-offer</h4>
+      <h2>Super Deals</h2>
+      <h1>On all Products</h1>
+      <p>save more with coupons & up to 70% off!</p>
+      <button>Shop Now</button>
     </section>
 
-    <section id="feature" class="section-p1">
-    </section>
+    <section id="feature" class="section-p1"></section>
 
     <section id="product1" class="section-p1">
-        <h2>Featured Products</h2>
-        <p>Summer Collection New Morden Design</p>
-        <div id="pro-Container" class="pro-container">
-        </div>
+      <h2>Featured Products</h2>
+      <p>Summer Collection New Morden Design</p>
+      <div id="pro-Container" class="pro-container"></div>
     </section>
 
     <section id="banner" class="section-m1">
-        <h4>Repair services</h4>
-        <h2>Up tp <span>70% off</span> - All t-Shirts & Acesssories </h2>
-        <button class="normal">Explore More</button>
+      <h4>Repair services</h4>
+      <h2>Up tp <span>70% off</span> - All t-Shirts & Acesssories</h2>
+      <button class="normal">Explore More</button>
     </section>
 
     <section id="product1" class="section-p1">
-        <h2>New Arrivals</h2>
-        <p>Summer Collection New Morden Design</p>
-        <div id='pro' class="pro-container">
-        </div>
+      <h2>New Arrivals</h2>
+      <p>Summer Collection New Morden Design</p>
+      <div id="pro" class="pro-container"></div>
     </section>
 
     <section id="sm-banner" class="section-p1">
-        <div class="banner-box">
-            <h4>Crazy deals</h4>
-            <h2>buy 1 get 1 free</h2>
-            <span>The best classic dress is on sale at cara</span>
-            <button class="white"> Learn More</button>
-        </div>
-        <div class="banner-box banner-box2">
-            <h4>spring/summer</h4>
-            <h2>upcoming season</h2>
-            <span>The best classic dress is on sale at cara</span>
-            <button class="white"> collection</button>
-        </div>
+      <div class="banner-box">
+        <h4>Crazy deals</h4>
+        <h2>buy 1 get 1 free</h2>
+        <span>The best classic dress is on sale at cara</span>
+        <button class="white">Learn More</button>
+      </div>
+      <div class="banner-box banner-box2">
+        <h4>spring/summer</h4>
+        <h2>upcoming season</h2>
+        <span>The best classic dress is on sale at cara</span>
+        <button class="white">collection</button>
+      </div>
     </section>
 
     <section id="banner3">
-        <div class="banner-box">
-            <h2>SEASONAL SALE</h2>
-            <h3>Winter Collection - 50% OFF</h3>
-        </div>
-        <div class="banner-box banner-box2">
-            <h2>NEW FOOTWEAR COLLECTION</h2>
-            <h3>Spring / Summer 2023</h3>
-        </div>
-        <div class="banner-box banner-box3">
-            <h2>T-SHIRTS</h2>
-            <h3>New Trendy Prints </h3>
-        </div>
+      <div class="banner-box">
+        <h2>SEASONAL SALE</h2>
+        <h3>Winter Collection - 50% OFF</h3>
+      </div>
+      <div class="banner-box banner-box2">
+        <h2>NEW FOOTWEAR COLLECTION</h2>
+        <h3>Spring / Summer 2023</h3>
+      </div>
+      <div class="banner-box banner-box3">
+        <h2>T-SHIRTS</h2>
+        <h3>New Trendy Prints</h3>
+      </div>
     </section>
 
     <section id="newsletter" class="section-p1 section-m1">
-        <div class="newstext">
-            <h4>Sign up For Newsletters</h4>
-            <p>get E-mail updates about our latest shop and <span>special offers</span></p>
-        </div>
-        <div class="form">
-            <input type="text" placeholder="Your email adress">
-            <button class="normal">Sign up</button>
-        </div>
+      <div class="newstext">
+        <h4>Sign up For Newsletters</h4>
+        <p>
+          get E-mail updates about our latest shop and
+          <span>special offers</span>
+        </p>
+      </div>
+      <div class="form">
+        <input type="text" placeholder="Your email adress" />
+        <button class="normal">Sign up</button>
+      </div>
     </section>
 
     <footer class="section-p1">
-        <div class="col">
-            <img class="logo" src="imgs/logo.png" alt="">
-            <h4>Contact</h4>
-            <p><strong>Adress:</strong> 562 Wellington Road , San Francisco </p>
-            <p><strong>Phone:</strong> +01 2222 365/ (+91) 01 2345 6789</p>
-            <p><strong>Hours:</strong>10:00am-18:00 Mon-Sat</p>
-            <div class="follow">
-                <h4>Follow Us</h4>
-                <div class="icon">
-                    <i class="fa-brands fa-facebook-f"></i>
-                    <i class="fa-brands fa-twitter"></i>
-                    <i class="fa-brands fa-pinterest"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-youtube"></i>
-                    
-                </div>
-
-            </div>
-
+      <div class="col">
+        <img class="logo" src="imgs/logo.png" alt="" />
+        <h4>Contact</h4>
+        <p><strong>Adress:</strong> 562 Wellington Road , San Francisco</p>
+        <p><strong>Phone:</strong> +01 2222 365/ (+91) 01 2345 6789</p>
+        <p><strong>Hours:</strong>10:00am-18:00 Mon-Sat</p>
+        <div class="follow">
+          <h4>Follow Us</h4>
+          <div class="icon">
+            <i class="fa-brands fa-facebook-f"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-pinterest"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-youtube"></i>
+          </div>
         </div>
-        <div class="col">
-            <h4>About</h4>
-            <a href="#">About us </a>
-            <a href="#">Delivery Information</a>
-            <a href="#">Privacy Policy </a>
-            <a href="#">Terms & Conditions </a>
-            <a href="#">Contact Us </a>
+      </div>
+      <div class="col">
+        <h4>About</h4>
+        <a href="#">About us </a>
+        <a href="#">Delivery Information</a>
+        <a href="#">Privacy Policy </a>
+        <a href="#">Terms & Conditions </a>
+        <a href="#">Contact Us </a>
+      </div>
+      <div class="col">
+        <h4>My Account</h4>
+        <a href="#">Sign in </a>
+        <a href="#">View Cart</a>
+        <a href="#">My Wishlist </a>
+        <a href="#">Track My Orders </a>
+        <a href="#">Help </a>
+      </div>
+      <div class="col install">
+        <h4>Install App</h4>
+        <p>From App store or Google Play</p>
+        <div class="row">
+          <img src="imgs/pay/app.jpg" alt="" />
+          <img src="imgs/pay/play.jpg" alt="" />
+          <p>Secured Payment Gateways</p>
+          <img src="imgs/pay/pay.png" alt="" />
         </div>
-        <div class="col">
-            <h4>My Account</h4>
-            <a href="#">Sign in  </a>
-            <a href="#">View Cart</a>
-            <a href="#">My Wishlist </a>
-            <a href="#">Track My Orders </a>
-            <a href="#">Help </a>
-        </div>
-        <div class="col install">
-            <h4>Install App</h4>
-            <p>From App store or Google Play</p>  
-            <div class="row">
-                <img src="imgs/pay/app.jpg" alt="">
-                <img src="imgs/pay/play.jpg" alt="">
-                <p>Secured Payment Gateways</p>  
-                <img src="imgs/pay/pay.png" alt="">
-            </div>          
-            
-        </div>
-
-
+      </div>
     </footer>
     <div class="copyright">
-        <p>@ 2021 , tech2 etc - Html CSS Ecommerce Template</p>
-
+      <p>@ 2021 , tech2 etc - Html CSS Ecommerce Template</p>
     </div>
 
     <script src="js/data.js"></script>
     <script src="js/script.js"></script>
-</body>
-
+  </body>
 </html>
